--- a/store.html
+++ b/store.html
@@ -805,3 +805,29 @@ function previewUploadedTimetable(data) {
 */
 
 
+            {% if total_rows_saved > 0 %}
+            <div class="info-box" style="margin-bottom: 1%; text-align: center; color: green;">
+                ✅ Total rows saved to database: {{ total_rows_saved }}
+            </div>
+            {% endif %}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+            
